# perception-heightmap-old

./: CMakeLists.txt  README.md
heightmap/: CMakeLists.txt  package.xml
heightmap_core/: CMakeLists.txt  package.xml
heightmap_core/include/heightmap_core/: BoundingBox.hpp  MapDataNode.hpp  MapTreeNode.hpp  Point2.hpp  Point3.hpp  heightmap_core.hpp
heightmap_core/src/: BoundingBox.cpp  MapDataNode.cpp  MapTreeNode.cpp  Point2.cpp  Point3.cpp
heightmap_msgs/: CMakeLists.txt  package.xml
heightmap_ros/: CMakeLists.txt  package.xml
heightmap_ros/include/heightmap_ros/: MapDataNodeROS.hpp  MapTreeNodeROS.hpp  heightmap_ros.hpp
heightmap_ros/sample/: using_msgs.cpp
heightmap_ros/src/: MapDataNodeROS.cpp  MapTreeNodeROS.cpp
heightmap_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
heightmap_rviz_plugin/include/heightmap_rviz_plugin/: HeightmapDisplay.hpp  HeightmapVisual.hpp
heightmap_rviz_plugin/src/: HeightmapDisplay.cpp  HeightmapVisual.cpp
oldmap/: CMakeLists.txt  package.xml
oldmap_core/: CMakeLists.txt  package.xml
oldmap_core/include/oldmap_core/: BoundingBox.hpp  MapDataNode.hpp  MapTreeNode.hpp  Point2.hpp  Point3.hpp  oldmap_core.hpp
oldmap_core/sample/: using_pcd.cpp  using_pcd_time_check.cpp
oldmap_core/src/: BoundingBox.cpp  MapDataNode.cpp  MapTreeNode.cpp  Point2.cpp  Point3.cpp
oldmap_msgs/: CMakeLists.txt  package.xml
oldmap_ros/: CMakeLists.txt  package.xml
oldmap_ros/include/oldmap_ros/: MapDataNodeROS.hpp  MapTreeNodeROS.hpp  oldmap_ros.hpp
oldmap_ros/src/: MapDataNodeROS.cpp  MapTreeNodeROS.cpp
oldmap_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
oldmap_rviz_plugin/include/oldmap_rviz_plugin/: OldmapDisplay.hpp  OldmapVisual.hpp
oldmap_rviz_plugin/src/: OldmapDisplay.cpp  OldmapVisual.cpp
