<?xml version="1.0"?>
<package format="2">
  <name>heightmap</name>
  <version>1.0.0</version>
  <description>Meta-package for Camel Heightmap library.</description>

  <maintainer email="lexqrt2@pusan.ac.kr">wj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>heightmap_msgs</exec_depend>
  <exec_depend>heightmap_core</exec_depend>
  <exec_depend>heightmap_ros</exec_depend>
  <exec_depend>heightamp_rviz_plugin</exec_depend>

  <export>
    <metapackage />
  </export>

</package>