<?xml version="1.0"?>
<package format="2">
  <name>heightmap_core</name>
  <version>1.0.0</version>
  <description>The camel-perception-heightmap core package</description>

  <maintainer email="lexqrt2@pusan.ac.kr">wj</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/PNUxCAMEL/camel-perception-heightmap</url>

  <buildtool_depend>catkin</buildtool_depend>

<!--  <depend>roscpp</depend>-->
  <depend>camel-euclid-vector</depend>

  <test_depend>gtest</test_depend>
</package>