<?xml version="1.0"?>
<package format="2">
  <name>heightmap_msgs</name>
  <version>1.0.0</version>
  <description>Heightmap message type.</description>

  <maintainer email="lexqrt2@pusan.ac.kr">wj</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/PNUxCAMEL/camel-perception-heightmap</url>

<!--  <buildtool_depend>catkin</buildtool_depend>-->

<!--  <build_depend>message_generation</build_depend>-->
<!--  <build_depend>std_msgs</build_depend>-->

<!--  <run_depend>message_runtime</run_depend>-->
<!--  <run_depend>std_msgs</run_depend>-->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
