<?xml version="1.0"?>
<package format="2">
  <name>oldmap_ros</name>
  <version>1.0.0</version>
  <description>The camel-perception-heightmap ros package</description>

  <maintainer email="lexqrt2@pusan.ac.kr">wj</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/PNUxCAMEL/camel-perception-heightmap</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>oldmap_core</depend>
  <depend>camel-euclid-vector</depend>
  <depend>oldmap_msgs</depend>

  <test_depend>gtest</test_depend>
</package>
